--- a/index.html
+++ b/index.html
@@ -28,18 +28,29 @@
 
 
           <div class="stob">
+               <div class="i">s1</div>
+               <div class="j">s2</div>
+               <div class="k">s3</div>
+               <div class="l">s4</div>
 
           </div>
 
 
 
           <div class="btos">
-
+               <div class="m">s5</div>
+               <div class="n">s6</div>
+               <div class="o">s7</div>
+               <div class="p">s8</div>
           </div>
 
 
-
-
+          <div class="sq4">
+               <div class="q">s5</div>
+               <div class="r">s6</div>
+               <div class="s">s7</div>
+               <div class="t">s8</div>
+          </div>
 
 
      </div>
